# minor-projects

./: README.md  harmonyos_codelabs.csv  harmonyos_codelabs.sh  harmonyos_samples.csv  harmonyos_samples.sh  openharmony-sig.csv  openharmony-sig.sh  openharmony.csv  openharmony.sh  repositories.csv  repositories.sh
openharmony/arkcompiler_ets_frontend/: .gitignore  BUILD.gn  README.md  README_zh.md  ark_config.gni  ark_root.gni  bundle.json  codecheck_ignore.json  ets_frontend_config.gni
openharmony/arkcompiler_ets_frontend/.gitee/: PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-CN.md
openharmony/arkcompiler_ets_frontend/arkguard/: BUILD.gn  package.json
openharmony/arkcompiler_ets_frontend/arkguard/scripts/: combination_config.json  combination_test.py  execute_result_statistics.js  grammar_test.py
openharmony/arkcompiler_ets_frontend/arkguard/src/: ArkObfuscator.ts  ArkObfuscatorForTest.ts
openharmony/arkcompiler_ets_frontend/arkguard/test/: package.json
openharmony/arkcompiler_ets_frontend/es2panda/: BUILD.gn  es2abc_config.gni  es2panda.cpp  es2panda.h
openharmony/arkcompiler_ets_frontend/ets2panda/: BUILD.gn  CMakeLists.txt  README.md  REVIEWERS  es2panda.cpp  es2panda.h  ets2abc_config.gni  package-lock.json
openharmony/arkcompiler_ets_frontend/merge_abc/: BUILD.gn
openharmony/arkcompiler_ets_frontend/test262/: config.py  ignored-test262-cmc-gc-fastverify-qemu-int.txt  ignored-test262-cmc-gc-fastverify-x64.txt  ignored-test262-debug-x64-aot-pgo.txt  ignored-test262-debug-x64-jit.txt  ignored-test262-fastverify-qemu-aot-pgo-litecg.txt  ignored-test262-fastverify-qemu-aot-pgo.txt  ignored-test262-fastverify-qemu-int.txt  ignored-test262-fastverify-x64-aot-pgo-litecg.txt  ignored-test262-fastverify-x64-aot-pgo.txt  ignored-test262-fastverify-x64-jit.txt  ignored-test262-fastverify-x64.txt  ignored-test262-other-cmc-gc-fastverify-x64-int.txt  ignored-test262-other-debug-x64-int.txt  ignored-test262-other-fastverify-qemu-aot-pgo-litecg.txt  ignored-test262-other-fastverify-qemu-aot-pgo.txt  ignored-test262-other-fastverify-qemu-int.txt  ignored-test262-other-fastverify-x64-aot-pgo-litecg.txt  ignored-test262-other-fastverify-x64-aot-pgo.txt  ignored-test262-other-fastverify-x64-int.txt  ignored-test262-other-release-qemu-aot-pgo.txt  ignored-test262-other-release-qemu-int.txt  ignored-test262-other-release-x64-aot-pgo-litecg.txt  ignored-test262-other-release-x64-aot-pgo.txt  ignored-test262-other-release-x64-jit.txt  ignored-test262-release-qemu-aot-pgo-litecg.txt  ignored-test262-release-qemu-aot-pgo.txt  ignored-test262-release-qemu-int.txt  ignored-test262-release-qemu-jit.txt  ignored-test262-release-x64-aot-pgo-litecg.txt  ignored-test262-release-x64-aot-pgo.txt  ignored-test262-release-x64-jit.txt  ignored-test262-release-x64.txt  intl_skip_tests.json  run_sunspider.py  run_test262.py  sendable_tests.txt  skip-test262-qemu-allmode.txt
openharmony/arkcompiler_ets_runtime/common_components/: BUILD.gn  runtime.cpp
openharmony/arkcompiler_runtime_core/arkplatform/: BUILD.gn  CMakeLists.txt  arkplatform_config.gni  hybrid_config.gni
openharmony/arkcompiler_runtime_core/libabckit/: .doxygen  BUILD.gn  README.md  README_zh.md  libabckit_config.gni
openharmony/arkcompiler_runtime_core/taihe/: .clang-format  .gitattributes  .gitignore  BUILD.gn  CMakeLists.txt  README.md  process_sdk_files.py
openharmony/arkcompiler_toolchain/adapter/: BUILD.gn
openharmony/arkcompiler_toolchain/tooling/: BUILD.gn  debugger_service.cpp  debugger_service.h  dispatcher.cpp  dispatcher.h  protocol_handler.cpp  protocol_handler.h
openharmony/arkui_ace_engine/: .gitignore  BUILD.gn  OAT.xml  ace_config.gni  bundle.json
openharmony/arkui_ace_engine/.gitee/: CODEOWNERS  PULL_REQUEST_TEMPLATE.zh-CN.md  owner_config.json
openharmony/arkui_ace_engine/advanced_ui_component/: .prettierrc  BUILD.gn  advanced_ui_component.gni  package.json
openharmony/arkui_ace_engine/component_ext/: BUILD.gn
openharmony/arkui_ace_engine/drawable/: BUILD.gn  drawable_descriptor.h  drawable_descriptor_base.h  drawable_descriptor_factory.cpp  drawable_descriptor_factory.h  js_drawable_descriptor.cpp  js_drawable_descriptor.h  pixelmap_drawable_descriptor.cpp  pixelmap_drawable_descriptor.h
openharmony/arkui_ace_engine_lite/: README.md  README_zh.md  ace_lite.gni  bundle.json  simulator.gni
openharmony/arkui_ace_engine_lite/.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
openharmony/arkui_ace_engine_lite/frameworks/: BUILD.gn  CMakeLists.txt
openharmony/arkui_ace_engine_lite/test/: ace_test_config.gni
openharmony/arkui_napi/: .clang-format  BUILD.gn  README.md  bundle.json  napi.gni
openharmony/arkui_napi/.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
openharmony/arkui_napi/callback_scope_manager/: native_callback_scope_manager.cpp  native_callback_scope_manager.h
openharmony/arkui_napi/jsvm/: BUILD.gn  build_jsvm.sh  build_jsvm_inter.sh  copy_v8.sh  hisysevent.yaml  jsvm.gni  v8_OpenSource.txt
openharmony/arkui_napi/module_manager/: module_checker_delegate.cpp  module_checker_delegate.h  module_load_checker.cpp  module_load_checker.h  native_module_manager.cpp  native_module_manager.h
openharmony/arkui_napi/native_engine/: native_api.cpp  native_api_internal.h  native_async_context.h  native_async_hook_context.h  native_async_work.cpp  native_async_work.h  native_create_env.cpp  native_create_env.h  native_deferred.h  native_engine.cpp  native_engine.h  native_event.cpp  native_event.h  native_node_api.cpp  native_node_hybrid_api.cpp  native_property.h  native_reference.h  native_safe_async_work.cpp  native_safe_async_work.h  native_sendable.cpp  native_sendable.h  native_utils.h  native_value.h  worker_manager.cpp  worker_manager.h
openharmony/arkui_napi/reference_manager/: native_reference_manager.cpp  native_reference_manager.h
openharmony/arkui_napi/scope_manager/: native_scope_manager.h
openharmony/arkui_napi/utils/: data_protect.h  data_protector.cpp  data_protector.h  file.h  log.cpp  log.h
openharmony/arkui_ui_appearance/services/: BUILD.gn  IUiAppearanceAbility.idl
(+70172 files in other folders)
